Closed
Bug 225848
Opened 22 years ago
Closed 22 years ago
[FIX]browser slows down and then stops, process must be killed to exit browser
Categories
(SeaMonkey :: General, defect, P1)
SeaMonkey
General
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.6beta
People
(Reporter: steveharris1, Assigned: bzbarsky)
References
()
Details
(Keywords: hang, perf)
Attachments
(2 files)
|
5.44 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
|
84.02 KB,
image/gif
|
Details |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4) Gecko/20030630
Build Identifier: mozilla 1.5, 1.6a, Firebird 0.7
Using Mandrake 9.2, Fedora1, Windows2000, Windows XP, using Mozilla 1.4 and
Mozilla 1.4.1 the problem is not present. But using Mozilla 1.5 or 1.6a or
Firebird 0.7 on Linux or Windows, when you view this webpage, the browser will
slow then freeze with the only way to exit is kill the process.
Reproducible: Always
Steps to Reproduce:
1.go to
http://download.fedora.redhat.com/pub/fedora/linux/core/1/i386/os/Fedora/RPMS/
2.during loading of the page, watch the mozilla icon in the top right. The page
will begin to slow down.
3.the browser eventually freezes.
Actual Results:
browser process had to be killed in the process manager/task manager.
Expected Results:
displayed the webpage quickly as in Mozilla 1.4 and 1.4.1
Browser exhibits same symptoms running Linux or Windows2000 or Windows XP.
It may be a webpage problem, but Mozilla 1.4 and 1.4.1 works properly.
http://download.fedora.redhat.com/pub/fedora/linux/core/1/i386/os/Fedora/RPMS/
| Assignee | ||
Comment 1•22 years ago
|
||
The page has 1500 images all in one big pre. So we spend a lot of time
needlessly looking for image frames... I'll see whether anything else sticks
out in the profile once that's fixed.
| Assignee | ||
Comment 2•22 years ago
|
||
With this, page takes approximately 5 seconds wall-clock time to render
completely.
| Assignee | ||
Comment 3•22 years ago
|
||
Comment on attachment 135624 [details] [diff] [review]
Proposed "fix"
jst, what do you think? It's the third PRPackedBool, so there should be no
additional bloat...
We really need a better way to handle broken images. :(
Attachment #135624 -
Flags: superreview?(jst)
Attachment #135624 -
Flags: review?(jst)
| Assignee | ||
Comment 4•22 years ago
|
||
Taking.
Assignee: general → bz-vacation
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Priority: -- → P1
Hardware: PC → All
Summary: browser slows down and then stops, process must be killed to exit browser → [FIX]browser slows down and then stops, process must be killed to exit browser
Target Milestone: --- → mozilla1.6beta
Comment 5•22 years ago
|
||
Comment on attachment 135624 [details] [diff] [review]
Proposed "fix"
Looks reasonable to me, given the way we deal with broken images...
Attachment #135624 -
Flags: superreview?(jst)
Attachment #135624 -
Flags: superreview+
Attachment #135624 -
Flags: review?(jst)
Attachment #135624 -
Flags: review+
| Assignee | ||
Comment 6•22 years ago
|
||
Checked in. Steve, thanks for filing the bug!
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
screenshot with fix, trunk cvs, linux.
To repro: Scroll to near bottom, then up.
Scroll a little more up and down. Select som text. Click on the selection.
Black appears. The lower area of the window becomes usesless for long periodes
of time, untill it suddenly refreshes. High CPU. Build from right before this
checkin chokes completely though, so it's much better than it was.
| Assignee | ||
Comment 8•22 years ago
|
||
> To repro: Scroll to near bottom, then up.
Yeah, that's a separate issue, covered by other bugs. The problem there is that
the <pre> has a random unnecessary "overflow:hidden" on it. This means it has
to get rendered as a unit, and it's 36714px tall over here, which overflows the
16-bit coordinates painting in X uses. Oops.
Comment 9•22 years ago
|
||
*** Bug 229204 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•22 years ago
|
||
*** Bug 229478 has been marked as a duplicate of this bug. ***
Comment 11•22 years ago
|
||
*** Bug 228993 has been marked as a duplicate of this bug. ***
Comment 12•22 years ago
|
||
With a fresh build, the URL here causes a full hang again.
To reproduce: click the link.
Mozilla goes on using 100% CPU and has to be killed.
http://download.fedora.redhat.com/pub/fedora/linux/core/development/i386/Fedora/RPMS/
| Assignee | ||
Comment 13•22 years ago
|
||
Christine, could you file a separate bug on that? Please cc me.
Updated•21 years ago
|
Product: Browser → Seamonkey
Comment 14•21 years ago
|
||
(In reply to comment #13)
> Christine, could you file a separate bug on that? Please cc me.
For reference, the followup was bug 239075
You need to log in
before you can comment on or make changes to this bug.
Description
•