Be a little smarter about handling the mess that is broken images.  Only look for a frame if we've had a frame at some point in the past; this should keep us from calling GetPrimaryFrameFor quite so much during pageload.  Bug 225848, r+sr=jst